--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-numpy==1.24.4
+numpy
 pandas
-xgboost==1.7.5
-scikit-learn==1.2.2
-imbalanced-learn==0.10.1
-shap==0.41.0
+scikit-learn>=1.5.0
+xgboost>=2.0.0
+imbalanced-learn>=0.12.0
+shap>=0.46.0
 matplotlib
 joblib
 streamlit
